--- a/main_presentation.tex
+++ b/main_presentation.tex
@@ -46,9 +46,7 @@
 \title[Undergraduate Thesis 2023]{Adoption of the Transformer Architecture for Supernova Detection in the DESI Survey}
 \subtitle{Undergraduate Senior Thesis 2023}
 % \subtitle{CSC 266 Final Project}
-\author[\href{mailto:alabarca@u.rochester.edu}{Anthony (AJ) LaBarca}]
-{
-\href{mailto:alabarca@u.rochester.edu}{Anthony (AJ) LaBarca}\\{\small Supervised by: \href{mailto:sybenzvi@pas.rochester.edu}{Professor Segev BenZvi}}}
+\author[\href{mailto:alabarca@u.rochester.edu}{Anthony (AJ) LaBarca}]{\href{mailto:alabarca@u.rochester.edu}{Anthony (AJ) LaBarca}\\{\small Supervised by: \href{mailto:sybenzvi@pas.rochester.edu}{Professor Segev BenZvi}}}
 % \author{
 % \author{}}
 \institute{University of Rochester}
