--- a/sections/02-background.tex
+++ b/sections/02-background.tex
@@ -1,6 +1,6 @@
 \section{Deep Learning Techniques}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}{Multi-Layer Perceptron}
     \begin{figure}[t]
         \centering
         \resizebox{.6\linewidth}{!}{\input{tikz/MLP}}
@@ -10,7 +10,7 @@
     \end{figure}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{CNN Architecture}
     \begin{figure}[t]
         \centering 
         \resizebox{.6\linewidth}{!}{\input{tikz/conn_unit}}
@@ -31,7 +31,7 @@
         \includegraphics[height=2.8cm]{figures/cnn/cnn_rocfull.png}
         \quad
         \includegraphics[height=2.8cm]{figures/cnn/cnn_cmfull.png}
-        \caption[CNN diagnostics]{CNN Diagnostics: ROC Curve (left) and Confusion Matrix (right)\label{fig:cnn_qual}}
+        \caption{CNN Classifier}
 %     \end{figure}
 % \end{frame}
 
@@ -49,7 +49,7 @@
         \includegraphics[height=2.6cm]{figures/cnn/cnn_roc99.png}
         \quad
         \includegraphics[height=2.6cm]{figures/cnn/cnn_cm99.png}
-        \caption[CNN diagnostics with a confidence cut]{CNN Diagnostics: ROC Curve (left) and Confusion Matrix (right) with a 99\% confidence cut\label{fig:cnn_qual2}}
+        \caption{CNN Classifier 99\% confidence cut (28.8\% remaining)}
     \end{figure}
 \end{frame}
 
