--- a/sections/04-results.tex
+++ b/sections/04-results.tex
@@ -2,9 +2,9 @@
 \begin{frame}{Spectral ViT V1}
     \begin{figure}
         \centering
-        \includegraphics[height=2.8cm]{figures/v1_real/vit_model_V1_original_redorocfulle_e31.png}
+        \includegraphics[height=2.8cm]{figures/Presentation/v1/vit_model_V1_original_redorocfulle_e31.png}
         \quad
-        \includegraphics[height=2.8cm]{figures/v1_real/vit_model_V1_original_redocmfull_e31.png}
+        \includegraphics[height=2.8cm]{figures/Presentation/v1/vit_model_V1_original_redocmfull_e31.png}
         \caption{Spectral ViT V1 Classifier\label{fig:v1_qual}}
         \pause
 %     \end{figure}
@@ -13,7 +13,7 @@
 % \begin{frame}
 %     \begin{figure}[t]
 %         \centering
-        \includegraphics[width=0.8\textwidth]{figures/v1_real/vit_model_V1_original_redomax_ypred_binary_31.png}
+        \includegraphics[width=0.8\textwidth]{figures/Presentation/v1/vit_model_V1_original_redomax_ypred_binary_31.png}
         \caption{Spectral ViT V1 Maximum Output Vector Value\label{fig:v1_max}}
     \end{figure}
 \end{frame}
@@ -21,24 +21,24 @@
 \begin{frame}{Spectral ViT V1 Cuts}
     \begin{figure}[b]
         \centering
-        \includegraphics[height=2.6cm]{figures/v1_real/vit_model_V1_original_redoroc99_e31.png}
+        \includegraphics[height=2.6cm]{figures/Presentation/v1/vit_model_V1_original_redoroc99_e31.png}
         \quad
-        \includegraphics[height=2.6cm]{figures/v1_real/vit_model_V1_original_redocm99_e31.png}
-        \caption{Spectral ViT V1 Classifier: 99\% confidence cut \label{fig:v1_99_qual}}
-        \includegraphics[height=2.6cm]{figures/v1_real/vit_model_V1_original_redoroc999999_e31.png}
+        \includegraphics[height=2.6cm]{figures/Presentation/v1/vit_model_V1_original_redocm99_e31.png}
+        \caption{Spectral ViT V1 Classifier: 99\% confidence cut (63.4\% remaining)\label{fig:v1_99_qual}}
+        \includegraphics[height=2.6cm]{figures/Presentation/v1/vit_model_V1_original_redoroc999999_e31.png}
         \quad
-        \includegraphics[height=2.6cm]{figures/v1_real/vit_model_V1_original_redocm999999_e31.png}
-        \caption{Spectral ViT V1 Classifier: 99.9999\% confidence cut \label{fig:v1_999999_qual}}
+        \includegraphics[height=2.6cm]{figures/Presentation/v1/vit_model_V1_original_redocm999999_e31.png}
+        \caption{Spectral ViT V1 Classifier: 99.9999\% confidence cut (40\% remaining)\label{fig:v1_999999_qual}}
     \end{figure}
 \end{frame}
 
 % \section{Spectral ViT V2: Specialized Classifier}
-\begin{frame}
+\begin{frame}{Spectral ViT V2}
     \begin{figure}[b!]
         \centering
-        \includegraphics[height=2.8cm]{figures/v2_real/vit_model_V2rocfulle_e26.png}
+        \includegraphics[height=2.8cm]{figures/Presentation/v2/vit_model_V2rocfulle_e26.png}
         \quad
-        \includegraphics[height=2.8cm]{figures/v2_real/vit_model_V2cmfull_e26.png}
+        \includegraphics[height=2.8cm]{figures/Presentation/v2/vit_model_V2cmfull_e26.png}
         \caption{Spectral ViT V2 Classifier\label{fig:v2_qual}}
 %     \end{figure}
 % \end{frame}
@@ -46,18 +46,18 @@
 % \begin{frame}
 %     \begin{figure}[t!]
 %         \centering
-        \includegraphics[width=0.8\textwidth]{figures/v2_real/vit_model_V2max_ypred_26.png}
+        \includegraphics[width=0.8\textwidth]{figures/Presentation/v2/vit_model_V2max_ypred_26.png}
         \caption{Spectral ViT V2 Maximum Output Vector Value\label{fig:v2_max}}
     \end{figure}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Spectral ViT V2 Cuts}
     \begin{figure}[b!]
         \centering
-        \includegraphics[height=2.8cm]{figures/v2_real/vit_model_V2roc99_e26.png}
+        \includegraphics[height=2.8cm]{figures/Presentation/v2/vit_model_V2roc99_e26.png}
         \quad
-        \includegraphics[height=2.8cm]{figures/v2_real/vit_model_V2cm99_e26.png}
-        \caption{Spectral ViT V2 Classifier (99\% confidence cut)\label{fig:v2_99_qual}}
+        \includegraphics[height=2.8cm]{figures/Presentation/v2/vit_model_V2cm99_e26.png}
+        \caption{Spectral ViT V2 Classifier: 99\% confidence cut (34\% remaining)\label{fig:v2_99_qual}}
     \end{figure}
 \end{frame}
 
@@ -65,9 +65,9 @@
 \begin{frame}{Binary Classifier}
     \begin{figure}[t!]
         \centering
-        \includegraphics[height=2.7cm]{figures/v2_real/vit_model_V2rocfull_binary_e26.png}
+        \includegraphics[height=2.7cm]{figures/Presentation/v2/vit_model_V2rocfull_binary_e26.png}
         \quad
-        \includegraphics[height=2.7cm]{figures/v2_real/vit_model_V2cmfull_binary_e26.png}
+        \includegraphics[height=2.7cm]{figures/Presentation/v2/vit_model_V2cmfull_binary_e26.png}
         \caption{Spectral ViT V2 Binary Classifier\label{fig:v2_binary_qual}}
     \end{figure}
 \end{frame}
@@ -75,17 +75,17 @@
 \begin{frame}{Other Classifiers}
     \begin{figure}
         \centering
-        \includegraphics[height=2.5cm]{figures/v2_applications/vit_model_V2roc99_proj_e26.png}
+        \includegraphics[height=2.5cm]{figures/Presentation/v2/vit_model_V2roc99_proj_e26.png}
         \quad
-        \includegraphics[height=2.5cm]{figures/v2_applications/vit_model_V2cm99_proj_e26.png}
-        \caption{Spectral ViT V2 Progenitor Classifier (99\% confidence cut)\label{fig:v2_99_proj_qual}}
+        \includegraphics[height=2.5cm]{figures/Presentation/v2/vit_model_V2cm99_proj_e26.png}
+        \caption{Spectral ViT V2 Progenitor Classifier: 99\% confidence cut (60\% remaining)\label{fig:v2_99_proj_qual}}
     % \end{figure}
     % \begin{figure}[t!]
     %     \centering
-        \includegraphics[height=2.5cm]{figures/v2_applications/vit_model_V2roc99_type_e26.png}
+        \includegraphics[height=2.5cm]{figures/Presentation/v2/vit_model_V2roc99_type_e26.png}
         \quad
-        \includegraphics[height=2.5cm]{figures/v2_applications/vit_model_V2cm99_type_e26.png}
-        \caption{Spectral ViT V2 Type Classifier (99\% confidence cut)\label{fig:v2_99_type_qual}}
+        \includegraphics[height=2.5cm]{figures/Presentation/v2/vit_model_V2cm99_type_e26.png}
+        \caption{Spectral ViT V2 Type Classifier: 99\% confidence cut (44\% remaining)\label{fig:v2_99_type_qual}}
     \end{figure}
 \end{frame}
 
@@ -93,9 +93,9 @@
 
 % \begin{figure}[h]
 %     \centering
-%     \includegraphics[height=2.7cm]{figures/v2_real/vit_model_V2roc9999_binary_e26.png}
+%     \includegraphics[height=2.7cm]{figures/Presentation/v2/vit_model_V2roc9999_binary_e26.png}
 %     \quad
-%     \includegraphics[height=2.7cm]{figures/v2_real/vit_model_V2cm9999_binary_e26.png}
+%     \includegraphics[height=2.7cm]{figures/Presentation/v2/vit_model_V2cm9999_binary_e26.png}
 %     \caption{Spectral ViT V2 Binary Diagnostics: ROC Curve (left) and Confusion Matrix (right) with a 99.99\% confidence
 %     cut \label{fig:v2_binary_9999_qual}}
 % \end{figure}
