--- a/sections/05-conclusions.tex
+++ b/sections/05-conclusions.tex
@@ -1,8 +1,10 @@
 \section{Conclusions}
 \begin{frame}
     \frametitle{Conclusions}
+    Models Presented:
     \begin{itemize}
-        \item Spectral ViT V1 should be tested on 
+        \item V1 shows high precision AND recall rate for subtype classification
+        \item V2 shows high precision AND recall rate for binary, type, and progenitor classification
     \end{itemize}
     \pause
     Future Research:
@@ -11,4 +13,8 @@
         \item New Models: Train on more data, DL Training Tricks (variable learning rate, pruning, etc)
         \item Other Applications: Spectral ViT could be applied to other transients (Gravitational Lensing)
     \end{itemize}
+\end{frame}
+
+\begin{frame}{Acknowledgements}
+    Professor Segev BenZvi
 \end{frame}
